--- a/app/src/main/res/layout/mycustom_dialog.xml
+++ b/app/src/main/res/layout/mycustom_dialog.xml
@@ -32,6 +32,16 @@
             android:gravity="center_horizontal"
             android:textAlignment="center" />
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="OK"
+                android:id="@+id/buttonDialog"
+                android:layout_gravity="center_horizontal"
+                android:layout_column="9" />
+
+
+
     </TableLayout>
 
 </LinearLayout>
