--- a/app/src/main/res/layout/mycustom_dialog.xml
+++ b/app/src/main/res/layout/mycustom_dialog.xml
@@ -33,12 +33,14 @@
             android:textAlignment="center" />
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="228dp"
                 android:layout_height="wrap_content"
                 android:text="OK"
                 android:id="@+id/buttonDialog"
                 android:layout_gravity="center_horizontal"
-                android:layout_column="9" />
+                android:layout_column="9"
+                android:clickable="true"
+                android:layout_margin="50dp" />
 
 
 
