--- a/app/src/main/res/layout/mycustom_dialog.xml
+++ b/app/src/main/res/layout/mycustom_dialog.xml
@@ -3,6 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
+    android:background="@drawable/mycustom_toast_border"
     android:layout_gravity="center_horizontal">
 
     <TableLayout android:layout_width="wrap_content"
@@ -33,16 +34,16 @@
             android:textAlignment="center" />
 
             <Button
-                android:layout_width="228dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="OK"
                 android:id="@+id/buttonDialog"
-                android:layout_gravity="center_horizontal"
-                android:layout_column="9"
                 android:clickable="true"
-                android:layout_margin="50dp" />
-
-
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginTop="20dp"
+                android:textAlignment="center" />
 
     </TableLayout>
 
